<resources>

    <!-- App-->
    <string name="app_name">Real Estate Manager</string>

    <string name="default_error_msg">Unsuccessful operation</string>

    <!-- Actions-->
    <string name="action_map">Map view</string>
    <string name="action_filter_all">See all</string>
    <string name="action_filter">Filtres</string>
    <string name="action_filter_house">See houses</string>
    <string name="action_filter_apartments">See apartments</string>
    <string name="action_filter_building">See buildings</string>
    <string name="action_filter_loft">See lofts</string>
    <string name="action_filter_castle">See castles</string>
    <string name="action_filter_boat">See boats</string>
    <string name="action_filter_mansion">See mansions</string>
    <string name="action_filter_site">See sites</string>
    <string name="action_filter_other">See others</string>

    <string name="action_criteria">Criteria</string>

    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">List Fragment</string>
    <string name="details_fragment_label">Details Fragment</string>
    <string name="split_fragment_label">Split Fragment</string>
    <string name="connection_error">connection error : cannot load map.\nPlease try again</string>

    <string name="map_user_location">Your location</string>
    <string name="map_user_location_error">Cannot display your location</string>

    <string name="map_enter_location">OR\n Manually enter location informations</string>
    <string name="map_latitude" translatable="false">Latitude</string>
    <string name="map_longitude" translatable="false">Longitude</string>
    <string name="map_location_input_error">Wrong data input</string>
    <string name="map_latitude_error">Latitude must be a number between -90 and 90</string>
    <string name="map_longitude_error">Longitude must be a number between -180 and 180</string>

    <string name="data_error">error while loading data</string>

    <!--Auth-->
    <string name="auth_title">Authentication</string>
    <string name="auth_identifier">Identifier</string>
    <string name="auth_password">Password</string>
    <string name="auth_log_in">Log in</string>
    <string name="auth_register">Register</string>
    <string name="auth_reset_password"><u>Reset password</u></string>
    <string name="auth_already_account"><u>I already have an account</u></string>
    <string name="auth_create_account"><u>Create an account</u></string>
    <string name="auth_invalid">Invalid credentials</string>
    <string name="auth_email_sent">Email sent</string>
    <string name="auth_email_error">Failed email</string>



    <!--Details-->
    <string name="details_type">Type</string>
    <string name="details_media">Medias</string>
    <string name="details_photos">Photo(s)</string>
    <string name="details_videos">Video(s)</string>
    <string name="details_description">Description</string>
    <string name="lorem_ipsum_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!--Specs-->
    <string name="details_surface" translatable="false">Surface : %1$d m²</string>
    <string name="details_rooms">Rooms : %1$s</string>
    <string name="details_bathrooms">Bathrooms : %1$s</string>
    <string name="details_bedrooms">Bedrooms : %1$s</string>
    <string name="details_specs">Informations</string>
    <string name="details_map">Map</string>
    <string name="details_address">Address</string>


    <!--Item Estate-->
    <string name="item_estate_type">Type</string>
    <string name="item_estate_city">City</string>
    <string name="item_estate_entry_date">entry date : %1$s</string>
    <string name="item_estate_sale_date">sale date : %1$s</string>
    <string name="item_estate_agent">Agent in charge : %1$s</string>
    <string name="item_estate_sold">Sold</string>

    <!--Filters-->
    <string name="filters_title">Add filters</string>
    <string name="filters_min">Minimum count of…</string>
    <string name="filters_price_dollars" translatable="false">%1$s $</string>
    <string name="filters_price_euros" translatable="false">%1$s €</string>
    <string name="filters_surface" translatable="false">%1$d m²</string>


    <string name="filters_dates">Dates</string>
    <string name="filters_entry_date">On the market since…</string>
    <string name="filters_sale_date">Sold since…</string>
    <string name="filters_available">Still available</string>
    <string name="filters_weeks">week(s)</string>
    <string name="filters_location">Location</string>
    <string name="filters_near">Nearby</string>
    <string name="filters_near_school">School</string>
    <string name="filters_near_shop">Shop</string>
    <string name="filters_near_gas">Gas station</string>
    <string name="filters_near_pub">Bar</string>
    <string name="filters_empty">None of our estate matches your request</string>


    <!--Add Estate-->
    <string name="add_estate_title">Add an estate</string>
    <string name="add_estate_type">Type</string>
    <string name="add_estate_medias">Medias</string>
    <string name="add_estate_city">City</string>
    <string name="add_estate_city_hint" translatable="false">Paris</string>
    <string name="add_estate_address">Address</string>
    <string name="add_estate_address_hint">36 Peace street</string>
    <string name="add_estate_price">Price</string>
    <string name="add_estate_price_hint">571 600 $</string>
    <string name="add_estate_price_hint_euros" translatable="false">526 000 €</string>
    <string name="add_estate_price_hint_dollars" translatable="false">571 600 $</string>

    <string name="add_estate_surface">Surface</string>
    <string name="add_estate_surface_placeholder" translatable="false">%1$d (m ²)</string>
    <string name="add_estate_rooms">Room(s)</string>
    <string name="add_estate_rooms_hint" translatable="false">2</string>
    <string name="add_estate_bathrooms">Bathroom(s)</string>
    <string name="add_estate_bathrooms_hint" translatable="false">4</string>
    <string name="add_estate_bedrooms">Bedroom(s)</string>
    <string name="add_estate_location" translatable="false">%1$s, %2$s</string>
    <string name="add_estate_bedrooms_hint" translatable="false">1</string>
    <string name="add_estate_description">Description</string>
    <string name="add_estate_description_hint">From the outside this house looks luxurious…</string>


    <string name="add_estate_map_no_location">Please, select your estate location</string>

    <string name="add_estate_input_error">Cannot be Empty</string>
    <string name="add_estate_pic_already_added">This photo has already been added</string>
    <string name="add_estate_success">Your estate has been saved.</string>


    <string name="add_estate_dialog_title">New photo</string>
    <string name="add_estate_dialog_video">New video</string>
    <string name="add_estate_dialog_text">Select a name</string>
    <string name="add_estate_dialog_confirm">Confirm</string>
    <string name="add_estate_dialog_no">No</string>

    <string name="type_house_raw" translatable="false">HOUSE</string>
    <string name="type_apartment_raw" translatable="false">APARTMENT</string>
    <string name="type_building_raw" translatable="false">BUILDING</string>
    <string name="type_loft_raw" translatable="false">LOFT</string>
    <string name="type_castle_raw" translatable="false">CASTLE</string>
    <string name="type_boat_raw" translatable="false">BOAT</string>
    <string name="type_mansion_raw" translatable="false">MANSION</string>
    <string name="type_site_raw" translatable="false">SITE</string>
    <string name="type_other_raw" translatable="false">OTHER</string>

    <string name="type_house">House</string>
    <string name="type_apartment">Apartment</string>
    <string name="type_building">Building</string>
    <string name="type_loft">Loft</string>
    <string name="type_castle">Castle</string>
    <string name="type_boat">Boat</string>
    <string name="type_mansion">Mansion</string>
    <string name="type_site">Site</string>
    <string name="type_other">Other</string>

    <string name="poi_title">Point of interest</string>
    <string name="poi_name">Name</string>
    <string name="poi_type_station">Station</string>
    <string name="poi_type_pub">Pub</string>
    <string name="poi_type_restaurant">Restaurant</string>
    <string name="poi_type_hostel">Hostel</string>
    <string name="poi_type_hospital">Hospital</string>
    <string name="poi_type_school">School</string>
    <string name="poi_type_park">Park</string>
    <string name="poi_type_other">Other</string>


    <string name="type_price_lowest" translatable="false"> &lt; 100 000</string>
    <string name="type_price_low" translatable="false"> &lt; 300 000</string>
    <string name="type_price_mid" translatable="false"> &lt; 500 000</string>

    <string name="type_price_mid_high" translatable="false"> &lt; 800 000</string>
    <string name="type_price_high" translatable="false"> &lt; 1 000 000</string>
    <string name="type_price_highest" translatable="false"> &gt; 1 000 000</string>

    <string name="type_price_custom">Enter your limit price</string>


    <string-array name="price_array">
        <item>0</item>
        <item>10 000</item>
        <item>20 000</item>
        <item>50 000</item>
        <item>100 000</item>
        <item>200 000</item>
        <item>300 000</item>
        <item>400 000</item>
        <item>500 000</item>
        <item>600 000</item>
        <item>700 000</item>
        <item>800 000</item>
        <item>900 000</item>
        <item>1 000 000</item>
        <item>&gt;1 000 000</item>
    </string-array>


    <string-array name="estate_type_array">
        <item>House</item>
        <item>Apartment</item>
        <item>Building</item>
        <item>Loft</item>
        <item>Castle</item>
        <item>Boat</item>
        <item>Mansion</item>
        <item>Site</item>
        <item>Other</item>
    </string-array>

    <string-array name="poi_type_array">
        <item>Station</item>
        <item>Pub</item>
        <item>Hostel</item>
        <item>Hospital</item>
        <item>School</item>
        <item>Park</item>
        <item>Restaurant</item>
        <item>Other</item>
    </string-array>

</resources>