<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/filters_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/add_estate_type"
            android:textColor="@color/main_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:id="@+id/filters_radio_type_group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filters_type_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/filters_layout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/filters_type_house"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="@string/type_house"
                        android:text="@string/type_house" />

                    <RadioButton
                        android:id="@+id/filters_type_apartment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="@string/type_apartment"
                        android:text="@string/type_apartment" />

                    <RadioButton
                        android:id="@+id/filters_type_building"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="@string/type_building"
                        android:text="@string/type_building" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/filters_layout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/filters_layout1"
                    app:layout_constraintTop_toTopOf="parent">


                    <RadioButton
                        android:id="@+id/filters_type_loft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="@string/type_loft"
                        android:text="@string/type_loft" />

                    <RadioButton
                        android:id="@+id/filters_type_apartment_castle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="@string/type_castle"
                        android:text="@string/type_castle" />

                    <RadioButton
                        android:id="@+id/filters_type_boat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="@string/type_boat"
                        android:text="@string/type_boat" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/filters_layout2"
                    app:layout_constraintTop_toTopOf="parent">


                    <RadioButton
                        android:id="@+id/filters_type_mansion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="@string/type_mansion"
                        android:text="@string/type_mansion" />

                    <RadioButton
                        android:id="@+id/filters_type_site"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="@string/type_site"
                        android:text="@string/type_site" />

                    <RadioButton
                        android:id="@+id/filters_type_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="@string/type_other"
                        android:text="@string/type_other" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </RadioGroup>

        <!--
                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/filters_slider_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="100000"
                    android:value="20000"
                    android:valueFrom="10000"
                    android:valueTo="1000000"
                    app:haloColor="@color/main_purple"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@ id/filters_price_title"

                    />

                    -->

        <TextView
            android:id="@+id/filters_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/add_estate_price"
            android:textColor="@color/main_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filters_radio_type_group1" />






        <com.google.android.material.button.MaterialButton
            android:id="@+id/filters_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_estate_dialog_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filters_slider_sale_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>