<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/filters_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_estate_type"
            android:textColor="@color/main_text"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/filters_type_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_estate_type" />


        <TextView
            android:id="@+id/filters_surface_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_estate_price"
            android:textColor="@color/main_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/filters_seekbar_price"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="1000000"
            android:progress="500000"
 />

        <TextView
            android:id="@+id/filters_surface_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_estate_surface"
            android:textColor="@color/main_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/filters_seekbar_surface"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="100"
            android:progress="10"/>

        <TextView
            android:id="@+id/filters_surface_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_estate_rooms"
            android:textColor="@color/main_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/filters_seekbar_rooms"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="100"
            android:progress="10"
 />

        <TextView
            android:id="@+id/filters_surface_bathrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_estate_bathrooms"
            android:textColor="@color/main_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/filters_seekbar_bathrooms"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="100"
            android:progress="10"
          />


        <TextView
            android:id="@+id/filters_surface_bedhrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_estate_bedrooms"
            android:textColor="@color/main_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/filters_seekbar_bedrooms"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="100"
            android:progress="10" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</com.google.android.material.card.MaterialCardView>